[gd_scene load_steps=7 format=3 uid="uid://bc6kvh2lupdg"]

[ext_resource type="Script" uid="uid://derru8rn7ol6r" path="res://scripts/player_attacks/spinning_slash.gd" id="1_w08kh"]
[ext_resource type="Texture2D" uid="uid://bybjddmr3dqsn" path="res://assets/player_attack_assets/spinning_sword_slash.png" id="2_x7le0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x7le0"]
radius = 38.0

[sub_resource type="Animation" id="Animation_sgqds"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_x7le0"]
resource_name = "slash"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sgqds"]
_data = {
&"RESET": SubResource("Animation_sgqds"),
&"slash": SubResource("Animation_x7le0")
}

[node name="SpinningSlash" type="Area2D"]
script = ExtResource("1_w08kh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_x7le0")
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 4)
shape = SubResource("CircleShape2D_x7le0")
debug_color = Color(0.9999998, 0, 0.106189586, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sgqds")
}

[node name="SlashDuration" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="SlashDuration" to="." method="_on_slash_duration_timeout"]
